--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
                 </p>
             </section> -->
             <div class="accordion-center">
-                <details class="accordion-004">
+                <details class="accordion-004 accordion-img1" >
                     <summary>サイト概要</summary>
-                    <p>枠線付きのシンプルなアコーディオンメニューです。</p>
+                    <p>枠線付きのシンプルなアコーディオンメニューです。<br>
+                    枠線付きのシンプルなアコーディオンメニューです。<br>
+                    枠線付きのシンプルなアコーディオンメニューです。</p>
                 </details>
-                <details class="accordion-004">
+                <details class="accordion-004 accordion-img2">
                     <summary>このサイトのこだわり</summary>
-                    <p>クセがなく、どんなサイトでも使いやすい汎用性があります。</p>
+                    <p>枠線付きのシンプルなアコーディオンメニューです。<br>
+                    枠線付きのシンプルなアコーディオンメニューです。<br>
+                    枠線付きのシンプルなアコーディオンメニューです。</p>
                 </details>
             </div>
             <section class="skills">
