--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
                 </button>
                 <nav class="nav-menu" id="js-nav-menu">
                     <ul>
-                         <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
+                        <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
@@ -43,5 +43,51 @@
                 </nav>
             </div>
         </header>
-    </body>
+        <div class="profile-main">
+            <img src="img/Designer.png" alt="私のアクスタ" class="acrylic stand main-left">
+                <div class="main-right">
+                    <p>名前    江藤　綾香</p><br>
+                    <p>生年月日   平成18年　6月17日</p><br>
+                    <p>出身地　　三重県津市</p><br>
+                    <p>やりたいことアプリ開発開発</p><br>
+                    <p>〇〇〇〇　●●</p>
+                </div>
+            </div>
+
+            <!-- <table class="info">途中かけ
+                    <h1 class="page-title">Company</h1>
+                    <tr>
+                        <th>名前</th>
+                        <td>大原簿記情報医療専門学校　津校</td>
+                    </tr>
+                    <tr>
+                        <th>住所</th>
+                        <td>〒514-0007 三重県津市大谷町148-1</td>
+                    <tr>
+                        <th>設立</th>
+                        <td>xxxx年xx月</td>
+                    </tr>
+                    </tr>
+                    <tr>
+                        <th>資本金</th>
+                        <td>xxxx万円</td>
+                    </tr>
+                    <tr>
+                        <th>従業員数</th>
+                        <td>xx名</td>
+                    </tr>
+                    <tr>
+                        <th>事業内容</th>
+                        <td>
+                            授業<br>
+                            家具販売<br>
+                            デザイン
+                        </td>
+                    </tr>
+                </table> -->
+            <div class="profile-word">
+                <h1>好きな言葉</h1>
+                <h2>笑う門には福来る！明日の自分が頑張らなくていいように今日頑張る</h2>
+            </div>
+        </body>
 </html>
