--- a/profile.html
+++ b/profile.html
@@ -46,45 +46,65 @@
         <div class="profile-main">
             <img src="img/Designer.png" alt="私のアクスタ" class="acrylic stand main-left">
                 <div class="main-right">
-                    <p>名前    江藤　綾香</p><br>
-                    <p>生年月日   平成18年　6月17日</p><br>
-                    <p>出身地　　三重県津市</p><br>
-                    <p>やりたいことアプリ開発開発</p><br>
-                    <p>〇〇〇〇　●●</p>
-                </div>
-            </div>
-
-            <!-- <table class="info">途中かけ
-                    <h1 class="page-title">Company</h1>
+                    <table>
+                    <!-- <h1 class="page-title">Company</h1> -->
                     <tr>
                         <th>名前</th>
-                        <td>大原簿記情報医療専門学校　津校</td>
+                        <td>江藤綾香</td>
                     </tr>
                     <tr>
-                        <th>住所</th>
-                        <td>〒514-0007 三重県津市大谷町148-1</td>
+                        <th>生年月日</th>
+                        <td>平成18年6月17日</td>
                     <tr>
-                        <th>設立</th>
-                        <td>xxxx年xx月</td>
-                    </tr>
-                    </tr>
-                    <tr>
-                        <th>資本金</th>
-                        <td>xxxx万円</td>
+                        <th>出身地</th>
+                        <td>三重県津市</td>
                     </tr>
                     <tr>
-                        <th>従業員数</th>
-                        <td>xx名</td>
+                        <th>やりたいこと</th>
+                        <td>アプリ開発</td>
                     </tr>
-                    <tr>
-                        <th>事業内容</th>
-                        <td>
-                            授業<br>
-                            家具販売<br>
-                            デザイン
-                        </td>
-                    </tr>
-                </table> -->
+                </table>
+                </div>
+            </div>
+            <div id="top" class="wrapper">
+                <ul class="product-list fadeIn">
+                    <li data-title="自分の長所" 
+                        data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
+                                自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
+                        data-img="img/4_Tyousyo.jpg"> <a href="#">
+                        <div class="item4">
+                            <p>自分の長所</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li data-title="自分の長所" 
+                        data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
+                                自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
+                        data-img="img/4_Tyousyo.jpg"> <a href="#">
+                        <div class="item4">
+                            <p>自分の長所</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li data-title="自分の長所" 
+                        data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
+                                自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
+                        data-img="img/4_Tyousyo.jpg"> <a href="#">
+                        <div class="item4">
+                            <p>自分の長所</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li data-title="してみたいこと" 
+                        data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                        data-img="img/5_Sky.jpeg"> <a href="#">
+                            <div class="item5">
+                                <p>してみたいこと</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div class="profile-word">
                 <h1>好きな言葉</h1>
                 <h2>笑う門には福来る！明日の自分が頑張らなくていいように今日頑張る</h2>
