--- a/index.html
+++ b/index.html
@@ -89,23 +89,33 @@
         <main>
         <div class="flow-wrapper">
             <div class="flow-container">
-                <div class="flow-card develop">
-                    <span class="num">01</span>
-                    <h3>Profile</h3>
-                    <div class="icon">+</div>
-                </div>
-                <div class="flow-card planning">
-                    <span class="num">02</span>
-                    <h3>今までの経験</h3>
-                    <div class="icon">+</div>
-                </div>
-                <div class="flow-card design">
-                    <span class="num">03</span>
-                    <h3>人生設計</h3>
-                    <div class="icon">+</div>
-                </div>
+                
+                <a href="profile.html" class="flow-link">
+                    <div class="flow-card develop">
+                        <span class="num">01</span>
+                        <h3>Profile</h3>
+                        <div class="icon">+</div>
+                    </div>
+                </a>
+
+                <a href="experience.html" class="flow-link">
+                    <div class="flow-card planning">
+                        <span class="num">02</span>
+                        <h3>今までの経験</h3>
+                        <div class="icon">+</div>
+                    </div>
+                </a>
+
+                <a href="life.html" class="flow-link">
+                    <div class="flow-card design">
+                        <span class="num">03</span>
+                        <h3>人生設計</h3>
+                        <div class="icon">+</div>
+                    </div>
+                </a>
+
             </div>
-        </div>
+        </div>          
         <div class="flow-dots">
             <span class="dot active"></span>
             <span class="dot"></span>
@@ -203,7 +213,6 @@
 
                         </div>
                     </div>
-                <a class="link-text" href="products.html">View More</a>
             <!-- トースト仮に実装してる　一旦邪魔だからコメントアウトしている -->
             <!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
