--- a/profile.html
+++ b/profile.html
@@ -109,5 +109,19 @@
                 <h1>好きな言葉</h1>
                 <h2>笑う門には福来る！明日の自分が頑張らなくていいように今日頑張る</h2>
             </div>
+                <div id="modal-container" class="modal">
+                        <div class="modal-content">
+                            <span class="close-btn">&times;</span>  
+                        <div id="modal-body" class="modal-flex-container">
+                            <div class="modal-left">
+                                <img id="modal-img" src="" alt="紹介画像">
+                            </div>
+                            <div class="modal-right">
+                                <h2 id="modal-title"></h2>
+                                <p id="modal-desc"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </body>
 </html>
