--- a/experience.html
+++ b/experience.html
@@ -8,11 +8,12 @@
         <meta name ='viewport' content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- ★=改造する時に触りたい！ -->
-        <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="img/fabicon_1-3.png">
         <!-- cssリセット　ブラウザによってcssがずれないようにするためのもの-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <!-- cssの読み込み -->
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="img/fabicon_1-3.png">
         <!--JQUERY-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/main.js" defer></script>
@@ -21,7 +22,7 @@
                 <!-- !-- ===== メインコンテンツtop（最初は非表示） ===== -->
         <div id="main-content" class="hidden">
             <header>
-                <h1><a>Profile</a></h1>
+                <h1><a>今までの経験</a></h1>
                 <p>自己紹介ページです</p>
             </header>
         </div>
@@ -43,5 +44,49 @@
                 </nav>
             </div>
         </header>
+        <div class="main-colums">
+            <table>
+                <tr>
+                    <td><img src="img/1_Seitokai.jpg" width="450px" height="310px"></td>
+                    <th>
+                        <h2>生徒会活動</h2>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </th>
+                </tr>
+                <tr>
+                    <td><img src="img/2_Group.jpeg" width="450px" height="310px"></td>
+                    <th>
+                        <h2>グループ活動</h2>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </th>
+                </tr>
+                <tr>
+                    <td><img src="img/3_Proguraminngu.jpeg" width="450px" height="310px"></td>
+                    <th>
+                        <h2>プログラミング</h2>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </th>
+                </tr>
+                <tr>
+                    <td><img src="img/8_Amamiku3.jpg" alt="違う画像に差し替えたい" width="450px" height="310px"></td>
+                    <th>
+                        <h2>アルバイト</h2>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </th>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
