--- a/profile.html
+++ b/profile.html
@@ -77,26 +77,26 @@
                         </div>
                         </a>
                     </li>
-                    <li data-title="自分の長所" 
-                        data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
-                                自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
+                    <li data-title="好きな言葉" 
+                        data-text="「同じ場所にとどまるためには、全力で走り続ければならない」です。
+                                    ITの業界で同じ位置にとどまるためには、全力で走らなくては、位置を守る事はできないと感じるからです。" 
                         data-img="img/4_Tyousyo.jpg"> <a href="#">
                         <div class="item4">
-                            <p>自分の長所</p>
+                            <p>好きな言葉</p>
                         </div>
                         </a>
                     </li>
-                    <li data-title="自分の長所" 
-                        data-text="周りを巻き込む力です。特にリーダーを務めているときに発揮されます。
-                                自分の行動力と一人一人にそった話方を武器に自信が掲げた目標を実現してきました。" 
+                    <li data-title="就活の軸" 
+                        data-text="私は、「挑戦できる環境、スキルアップが望める環境で仕事ができる」かを就活の軸としています。" 
                         data-img="img/4_Tyousyo.jpg"> <a href="#">
                         <div class="item4">
-                            <p>自分の長所</p>
+                            <p>就活の軸</p>
                         </div>
                         </a>
                     </li>
                     <li data-title="してみたいこと" 
-                        data-text="高校二年生で生徒会を務めました。リーダーシップを学びました。" 
+                        data-text="スカイダイビングです。
+                                    見る事のない景色を見たいと思うからです。" 
                         data-img="img/5_Sky.jpeg"> <a href="#">
                             <div class="item5">
                                 <p>してみたいこと</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="profile-word">
                 <h1>好きな言葉</h1>
-                <h2>笑う門には福来る！明日の自分が頑張らなくていいように今日頑張る</h2>
+                <h2>「同じ場所にとどまるためには、全力で走り続ければならない」</h2>
             </div>
                 <div id="modal-container" class="modal">
                         <div class="modal-content">
