--- a/life.html
+++ b/life.html
@@ -8,7 +8,7 @@
         <meta name ='viewport' content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- ★=改造する時に触りたい！ -->
-        <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="img/fabicon_1-3.png">
         <!-- cssリセット　ブラウザによってcssがずれないようにするためのもの-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <!-- cssの読み込み -->
@@ -18,13 +18,6 @@
         <script src="js/main.js" defer></script>
     </head>
     <body>
-                <!-- !-- ===== メインコンテンツtop（最初は非表示） ===== -->
-        <div id="main-content" class="hidden">
-            <header>
-                <h1><a>Profile</a></h1>
-                <p>自己紹介ページです</p>
-            </header>
-        </div>
         <header id="header" class="wrapper">
             <div class="main">
                 <button class="nav-toggle" id="js-nav-toggle">
@@ -34,7 +27,7 @@
                 </button>
                 <nav class="nav-menu" id="js-nav-menu">
                     <ul>
-                         <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
+                        <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
