--- a/experience.html
+++ b/experience.html
@@ -50,40 +50,55 @@
                     <td><img src="img/1_Seitokai.jpg" width="450px" height="310px"></td>
                     <th>
                         <h2>生徒会活動</h2>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>私は高校２年生の時に生徒会長を務めていました。生徒会長として自身が掲げた公約を実現する事が
+                            できました。掲げた公約は「校内でスマホの使用を禁止という校則を見直す事」でした。公約を実現するにあたり、
+                            壁になったのは、生徒指導の先生に校則の見直しを許可してもらうことです。この公約は、過去の生徒会の先輩方が
+                            ３年間かけて取り組んでも、実現することが出来ていなかったものでした。公約を実現するにあたり、先生と生徒側の
+                            意見との落としどころがないかと考えた結果、「スマホの指導件数が２か月に５件以下なら校則の見直しを前向きに検討する」
+                            と条件を頂いたので、その条件を達成するべく、生徒会全員で休み時間校内を見回ったり、朝のホームルームの時間に放送をして呼びかけをしました。
+                            また、各学年の担任の先生に朝のホームルーム時にスマホの電源を切りスマホを鞄の中に入れているかを確認してもらうように
+                            していました。その結果、条件を達成することができ、公約を実現する事が出来ました。
+                        </p>
                     </th>
                 </tr>
                 <tr>
                     <td><img src="img/2_Group.jpeg" width="450px" height="310px"></td>
                     <th>
                         <h2>グループ活動</h2>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>
+                            専門学校で、「SNSのフォローを増やす施策」というテーマのグループ活動に取り組みました。期限は、2カ月間で、
+                            2カ月でグループの意見をまとめてスライドを作成し、発表する準備をしなくてはいけませんでした。私は、グループ活動で
+                            リーダーを務め、期限内に終わらせるために、スケジュール管理や、役割分担、メンバー一人一人とのコミュニケーションなどを
+                            行っておりました。活動が進むにつれ、個々の発言量も増え、ToDoリストや月間のスケジュールを皆で共有しながら取り組んだので
+                            全員が目的意識をもって取り組めていた点がグループ活動で良かった点です。結果的にグループ活動の成果物は、
+                            先生やクラスメイトに褒められる物を作り上げることができたので。良い経験ができたと思っております。
+                        </p>
                     </th>
                 </tr>
                 <tr>
                     <td><img src="img/3_Proguraminngu.jpeg" width="450px" height="310px"></td>
                     <th>
-                        <h2>プログラミング</h2>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <h2>ITスキル</h2>
+                        <p>
+                            私は、MOS Associateと基本情報技術者試験を専門学校での勉強を通じて取得しました。
+                            基本情報技術者試験は、3回受験をし、2回不合格となりましたが、めげずに勉強を続け、3回目で合格する事が叶いました。
+                            MOSは、実際の作業を通じて知識を身につけていきました。真っ新な所から、文書を書くという授業もあり、実務でも使える
+                            パソコンスキルを持っていると思います。また、専門学校では、プログラミングを学んでいます。
+                            言語は、HTML,CSS,JavaScriptです。一年生では、フロントエンドを、二年生ではバックエンドの言語を学んでいきます。
+                            一年生では、Webクリエイター能力試験を受験し、合格しました。自分で考えた事をコードに起こすという工程を通して、プログラミングを
+                            することが手強くなくなりました。
+                        </p>
                     </th>
                 </tr>
                 <tr>
                     <td><img src="img/8_Amamiku3.jpg" alt="違う画像に差し替えたい" width="450px" height="310px"></td>
                     <th>
                         <h2>アルバイト</h2>
-                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>
+                            カフェのバイトとラーメン屋を掛け持ちしております。
+                            左にある写真は、カフェのバイトの賄いです。はんぺいの創作練り物を使った料理があるお店で、私はキッチンとして
+                            働いております。キッチンでバイトする中で、自身の成長につながった所は、「」です。
+                        </p>
                     </th>
                 </tr>
             </table>
