--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
         <!-- ===== ローディング画面終了 ===== -->
         <!-- !-- ===== メインコンテンツtop（最初は非表示） ===== -->
         <div id="main-content" class="hidden">
-            <header>
+            <video width="100%" height="auto" autoplay loop muted playsinline>
+                <source src="img/move.mp4" type="video/mp4">
+            </video>
+            <div class="top-mesaage">
                 <h1>Portfolio</h1>
                 <p>自己紹介ページです</p>
-            </header>
-            <!-- <section class="profile">
-                <h2>About Me</h2>
-                <div class="About-icon">+</div>
-                <p id="About-text">
-                    大原簿記情報医療専門学校津校　情報処理科　プログラミングコース2年制に在学しております<br>
-                    小学校から専門学生の今に至るまで、リーダーという役割を担ってきました！
+                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                 </p>
-            </section> -->
+            </div>
             <div class="accordion-center">
                 <details class="accordion-004 accordion-img1" >
                     <summary>サイト概要</summary>
