--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
                 </button>
                 <nav class="nav-menu" id="js-nav-menu">
                     <ul>
+                        <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
