人生設計を取り掛かった所だよ

--- a/experience.html
+++ b/experience.html
@@ -49,36 +49,45 @@
                 <tr>
                     <td><img src="img/1_Seitokai.jpg" width="450px" height="310px"></td>
                     <th>
-                        <h2>生徒会活動</h2>
-                        <p>私は高校２年生の時に生徒会長を務めていました。生徒会長として自身が掲げた公約を実現する事が
-                            できました。掲げた公約は「校内でスマホの使用を禁止という校則を見直す事」でした。公約を実現するにあたり、
-                            壁になったのは、生徒指導の先生に校則の見直しを許可してもらうことです。この公約は、過去の生徒会の先輩方が
-                            ３年間かけて取り組んでも、実現することが出来ていなかったものでした。公約を実現するにあたり、先生と生徒側の
-                            意見との落としどころがないかと考えた結果、「スマホの指導件数が２か月に５件以下なら校則の見直しを前向きに検討する」
-                            と条件を頂いたので、その条件を達成するべく、生徒会全員で休み時間校内を見回ったり、朝のホームルームの時間に放送をして呼びかけをしました。
-                            また、各学年の担任の先生に朝のホームルーム時にスマホの電源を切りスマホを鞄の中に入れているかを確認してもらうように
-                            していました。その結果、条件を達成することができ、公約を実現する事が出来ました。
+                        <h2>生徒会活動：停滞していた校則改定を「行動力」で突破</h2>
+                        <br>
+                        <p>
+                            高校2年時、生徒会長として「スマホ使用禁止」の校則見直しに挑みました。 「先生側の不安（指導件数）」と「生徒の要望」の落とし所を模索し、「2か月で指導5件以下なら再検討」という条件を引き出しました。
+                            即座に生徒全員での見回りや放送での啓発活動を指揮。結果、条件をクリアし公約を実現しました。 「相手の懸念を理解し、行動で信頼を勝ち取る」。これが私のリーダーシップの原点です。
                         </p>
                     </th>
                 </tr>
                 <tr>
                     <td><img src="img/2_Group.jpeg" width="450px" height="310px"></td>
                     <th>
-                        <h2>グループ活動</h2>
+                        <h2>グループ活動：SNS施策プロジェクトを成功に導いた、全員参加型のリーダーシップ</h2>
+                        <br>
                         <p>
-                            専門学校で、「SNSのフォローを増やす施策」というテーマのグループ活動に取り組みました。期限は、2カ月間で、
-                            2カ月でグループの意見をまとめてスライドを作成し、発表する準備をしなくてはいけませんでした。私は、グループ活動で
-                            リーダーを務め、期限内に終わらせるために、スケジュール管理や、役割分担、メンバー一人一人とのコミュニケーションなどを
-                            行っておりました。活動が進むにつれ、個々の発言量も増え、ToDoリストや月間のスケジュールを皆で共有しながら取り組んだので
-                            全員が目的意識をもって取り組めていた点がグループ活動で良かった点です。結果的にグループ活動の成果物は、
-                            先生やクラスメイトに褒められる物を作り上げることができたので。良い経験ができたと思っております。
+                            【挑戦したこと】 「SNSのフォロワーを増やす施策」をテーマに、2か月で意見集約からスライド作成、発表準備まで完遂すること。<br>
+                            【取り組んだ工夫】 リーダーとして、ただ指示を出すのではなく、メンバー一人ひとりと密にコミュニケーションを実施。ToDoリストや月間スケジュールを可視化して共有することで、「誰が・何を・いつまでに」という目的意識を全員で揃えました。<br>
+                            【結果】 活動が進むにつれてチーム内の発言量が増え、最終的には先生やクラスメイトから高く評価される成果物を完成させることができました。
+                        </p>
+                    </th>
+                </tr>
+                <tr>
+                    <td><img src="img/8_Amamiku3.jpg" alt="違う画像に差し替えたい" width="450px" height="310px"></td>
+                    <th>
+                        <h2>アルバイト</h2>
+                        <br>
+                        <p>
+                            カフェのバイトとラーメン屋を掛け持ちしております。
+                            左にある写真は、カフェのバイトの賄いです。はんぺいの創作練り物を使った料理があるお店で、私はキッチンとして
+                            働いております。キッチンでバイトする中で、「相手の立場になって考える事」がよりできるようになりました。
+                            新人の方に、業務内容を教えるときに、相手がどこまで理解しているのか、今から何をしようとして分からずにいるのかを考え、サポートしてきました。
+                            その結果、入って６カ月になる子が、一人で仕事を完璧に遂行できるようになり、自身の指導に自信を持ちました。
                         </p>
                     </th>
                 </tr>
                 <tr>
                     <td><img src="img/3_Proguraminngu.jpeg" width="450px" height="310px"></td>
                     <th>
-                        <h2>ITスキル</h2>
+                        <h2>ITスキル：継続的な学習による資格取得と、実務を見据えた開発スキルの習得</h2>
+                        <br>
                         <p>
                             私は、MOS Associateと基本情報技術者試験を専門学校での勉強を通じて取得しました。
                             基本情報技術者試験は、3回受験をし、2回不合格となりましたが、めげずに勉強を続け、3回目で合格する事が叶いました。
@@ -90,18 +99,49 @@
                         </p>
                     </th>
                 </tr>
-                <tr>
-                    <td><img src="img/8_Amamiku3.jpg" alt="違う画像に差し替えたい" width="450px" height="310px"></td>
-                    <th>
-                        <h2>アルバイト</h2>
-                        <p>
-                            カフェのバイトとラーメン屋を掛け持ちしております。
-                            左にある写真は、カフェのバイトの賄いです。はんぺいの創作練り物を使った料理があるお店で、私はキッチンとして
-                            働いております。キッチンでバイトする中で、自身の成長につながった所は、「」です。
-                        </p>
-                    </th>
-                </tr>
             </table>
+            <div id="top" class="wrapper">
+                <h1 class="profile">
+                    保有資格
+                </h1>
+                <ul class="product-list fadeIn">
+                            <li data-title="Webクリエイター能力試験" 
+                                data-text="" 
+                                data-img="#"> <a href="#">
+                                    <div class="item1">
+                                        <p>Webクリエイター能力試験</p>
+                                    </div>
+                                </a>
+                            </li>     
+                            <li data-title="MOS Associate" 
+                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                data-img="img/1_Seitokai.jpg"> <a href="#">
+                                    <div class="item1">
+                                        <p>MOS Associate</p>
+                                    </div>
+                                </a>
+                            </li>     
+                            <li data-title="サービス介助士" 
+                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                data-img="img/1_Seitokai.jpg"> <a href="#">
+                                    <div class="item1">
+                                        <p>サービス介助士</p>
+                                    </div>
+                                </a>
+                            </li>     
+                            <li data-title="基本情報技術者試験" 
+                                data-text="高校二年生では、生徒会長を務め、自身が掲げた公約を実現する事ができました。
+                                            生徒会長を務める中で、スケジュール管理能力や、統率力、最後までやり切る力を身につける事ができました。" 
+                                data-img="img/1_Seitokai.jpg"> <a href="#">
+                                    <div class="item1">
+                                        <p>基本情報技術者試験</p>
+                                    </div>
+                                </a>
+                            </li>     
+                </ul>
+            </div>
         </div>
     </body>
 </html>
