--- a/life.html
+++ b/life.html
@@ -17,7 +17,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/main.js" defer></script>
     </head>
-    <body>
+    <body style="background-color:#ffc0cb;">
         <header id="header" class="wrapper">
             <div class="main">
                 <button class="nav-toggle" id="js-nav-toggle">
@@ -36,5 +36,12 @@
                 </nav>
             </div>
         </header>
+        <div>
+                <h1>人生設計</h1>
+                <p>自己紹介ページです</p>
+        </div>
+        <div class="life-main">
+            <img src="img/名称未設定-1.png">
+        </div>
     </body>
 </html>
