--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <!-- pcとスマホを切り替えるために必ず必要なコード -->
         <meta name ='viewport' content="width=device-width",initial-scale='1'>
         <!-- ★=改造する時に触りたい！ -->
-        <link rel="icon" href="img/fabicon2.png">
+        <link rel="icon" href="img/fabicon_1-3.png">
         <!-- cssリセット　ブラウザによってcssがずれないようにするためのもの-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <!-- cssの読み込み -->
