--- a/life.html
+++ b/life.html
@@ -17,7 +17,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/main.js" defer></script>
     </head>
-    <body style="background-color:#ffc0cb;">
+    <body style="background-color:#ffffffd4;">
         <header id="header" class="wrapper">
             <div class="main">
                 <button class="nav-toggle" id="js-nav-toggle">
@@ -38,7 +38,6 @@
         </header>
         <div>
                 <h1>人生設計</h1>
-                <p>自己紹介ページです</p>
         </div>
         <div class="life-main">
             <img src="img/名称未設定-1.png">
