--- a/index.html
+++ b/index.html
@@ -35,29 +35,26 @@
             <video width="100%" height="auto" autoplay loop muted playsinline>
                 <source src="img/move.mp4" type="video/mp4">
             </video>
-            <div class="top-mesaage">
+            <div class="top-mesaage" style="padding-top: 70px;padding-bottom: 70px;">
                 <h1>Portfolio</h1>
-                <p>自己紹介ページです</p>
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                </p>
+                <u style="color: #ffb6c1; font-size: large;" >~私のなりたい自分へ~</u>
             </div>
             <div class="accordion-center">
                 <details class="accordion-004 accordion-img1" >
                     <summary>サイト概要</summary>
-                    <p>枠線付きのシンプルなアコーディオンメニューです。<br>
-                    枠線付きのシンプルなアコーディオンメニューです。<br>
-                    枠線付きのシンプルなアコーディオンメニューです。</p>
+                    <p>
+                            このサイトは、自身が思う過去・現在・未来の事について<br>
+                        書いたサイトです。私がどういった人間なのかがサイトを全て見てもらえますと<br>
+                        分かります！是非見てみてください！
+                    </p>
                 </details>
                 <details class="accordion-004 accordion-img2">
                     <summary>このサイトのこだわり</summary>
-                    <p>枠線付きのシンプルなアコーディオンメニューです。<br>
-                    枠線付きのシンプルなアコーディオンメニューです。<br>
-                    枠線付きのシンプルなアコーディオンメニューです。</p>
+                    <p>
+                        このサイトはピンクを基調としたサイトです。<br>
+                        ピンクを基調とすることで、「明るい女の子」という雰囲気を演出しています。<br>
+                        またサイトに使われている字体や、イラストなどもこだわっております。
+                    </p>
                 </details>
             </div>
             <section class="skills">
@@ -232,11 +229,12 @@
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
         <footer id="footer" class="wrapper">
-            <ul class="menu">
+            <!-- ここのデザインを考えなくてはいけない -->
+            <!-- <ul class="menu">
                 <li>INSTAGRAM</li>
                 <li>TWITTER</li>
                 <li>FACEBOOK</li>
-            </ul>
+            </ul> -->
 
         </footer>
     </body>
