--- a/life.html
+++ b/life.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <!-- cssの読み込み -->
         <link rel="stylesheet" href="css/style.css">
-        <!--JQUERY-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="js/main.js" defer></script>
     </head>
@@ -36,8 +35,10 @@
                 </nav>
             </div>
         </header>
-        <div>
-                <h1>人生設計</h1>
+        <div id="main-content" class="hidden">
+            <header>
+                <h1><a>人生設計</a></h1>
+            </header>
         </div>
         <div class="life-main">
             <img src="img/名称未設定-1.png">
