--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <span class="dot"></span>
         </div>
 
-            <div id="top" class="wrapper">
+            <div id="top" class="wrapper" style="padding-top: 100px;">
                 <h1 class="profile">
                     Contents
                 </h1>
@@ -228,14 +228,14 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
-        <footer id="footer" class="wrapper">
+        <footer id="footer">
             <!-- ここのデザインを考えなくてはいけない -->
             <!-- <ul class="menu">
                 <li>INSTAGRAM</li>
                 <li>TWITTER</li>
                 <li>FACEBOOK</li>
             </ul> -->
-
+            <img src="img/footer-image.png" style="width: 100%; padding-top: 150px;">
         </footer>
     </body>
 </html>
