--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
         <div id="main-content" class="hidden">
             <header>
                 <h1><a>今までの経験</a></h1>
-                <p>自己紹介ページです</p>
+                <p>このページでは、高校、専門学校での私の活動を紹介しています。</p>
             </header>
         </div>
         <header id="header" class="wrapper">
@@ -39,7 +39,6 @@
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
-                        <li><a href="contact.html">Contact<span>お問い合わせ</span></a></li>
                     </ul>
                 </nav>
             </div>
