--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
                         <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
-                        <li><a href="contact.html">Contact<span>お問い合わせ</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -228,14 +227,18 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
-        <footer id="footer">
-            <!-- ここのデザインを考えなくてはいけない -->
-            <!-- <ul class="menu">
-                <li>INSTAGRAM</li>
-                <li>TWITTER</li>
-                <li>FACEBOOK</li>
-            </ul> -->
-            <img src="img/footer-image.png" style="width: 100%; padding-top: 150px;">
+        <footer id="footer" style="padding-top: 90px;">
+            <div class="footer-img">
+                <img src="img/footer-image.png" style="width: 120%; height: 400px">
+                <a href="contact.html" class="contact-button">お問い合わせはこちら</a>
+                <div class="nav-p">
+                    <ul>
+                        <li><a href="profile.html">プロフィール</a></li>
+                        <li><a href="experience.html">今までの経験</a></li>
+                        <li><a href="life.html">人生設計</a></li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
