--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <nav class="nav-menu" id="js-nav-menu">
                     <ul>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
-                        <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
+                        <li><a href="experience.html">Story<span>今までの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
                     </ul>
                 </nav>
@@ -227,7 +227,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
-        <footer id="footer" style="padding-top: 90px;">
+        <footer id="footer" style="padding-top: 90px;" class="fadeIn">
             <div class="footer-img">
                 <img src="img/footer-image.png" style="width: 120%; height: 400px">
                 <a href="contact.html" class="contact-button">お問い合わせはこちら</a>
