--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
                     <ul>
                         <li><a href="index.html">TOP<span>TOPページへ</span></a></li>
                         <li><a href="profile.html">Profile<span>プロフィール</span></a></li>
-                        <li><a href="experience.html">Story<span>これまでの経験</span></a></li>
+                        <li><a href="experience.html">Story<span>今までの経験</span></a></li>
                         <li><a href="life.html">Future<span>人生設計</span></a></li>
                     </ul>
                 </nav>
